<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mipo</string>
    <string name="action_settings">Settings</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>
    <string name="message_hint">Say anything</string>
    <string name="send">Send</string>

    <string-array name="lookingForSpinner1">
        <item>Do Not Show</item>
        <item>Chat</item>
        <item>Dates</item>
        <item>Friends</item>
        <item>Networking</item>
        <item>Relationship</item>
        <item>Right Now</item>
    </string-array>

    <string-array name="bodyTypeSpinner">
        <item>Do Not Show</item>
        <item>Slim</item>
        <item>Toned</item>
        <item>Average</item>
        <item>Large</item>
        <item>Stocky</item>
    </string-array>

    <string-array name="ethnicitySpinner">
        <item>Do Not Show</item>
        <item>Middle Eastern</item>
        <item>Native American</item>
        <item>Black</item>
        <item>Latino</item>
        <item>Mixed</item>
        <item>Other</item>
        <item>South Asian</item>
        <item>White</item>
    </string-array>

    <string-array name="relationshipSpinner">
        <item>Do Not Show</item>
        <item>Committed</item>
        <item>Dating</item>
        <item>Engaged</item>
        <item>Exclusive</item>
        <item>Married</item>
        <item>Open Relationship</item>
        <item>Partnered</item>
        <item>Single</item>
    </string-array>



    <string name="doNotShow">Do Not Show</string>

    <string name="All">All</string>

    <string name="LoginAs">Login As</string>
    <string name="LoginAsGuest">Login As Guest</string>
    <string name="menu">Menu</string>
    <string name="editProfile">Edit Profile</string>
    <string name="SmsVerification">Sms Verification</string>
    <string name="age">Age</string>
    <string name="lookingFor">Looking For</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="bodyType">Body Type</string>
    <string name="origin">Ethnicity</string>
    <string name="relationshipStatus">Relationship Status</string>
    <string name="statusLine">Status Line</string>
    <string name="onlyPic">Only Pictures</string>
    <string name="filter">Filter</string>
    <string name="messages">Messages</string>
    <string name="favorites">Favorites</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="all">All</string>
    <string name="to">To</string>
    <string name="turnGps">Turn on gps to show profiles</string>
    <string name="smsExp">Dear User, Since its your first use of the app - you must go through a sort and simple registration.</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="username">Username</string>
    <string name="optional">(optional)</string>
    <string name="upload">Upload picture</string>
    <string name="signUp">Done</string>
    <string name="createProfile">Create Profile</string>
    <string name="pleaseProfile">Please Create Profile</string>
    <string name="name">Name</string>
    <string name="isSingle">What\'s is up with you today?</string>
    <string name="next">Next</string>
    <string name="about">Write about yourself:</string>
    <string name="km">km</string>
    <string name="meter">meters</string>
    <string name="seen">seen</string>
    <string name="before">ago</string>
    <string name="minutes">minutes</string>
    <string name="online">Online</string>
    <string name="m">15m</string>
    <string name="tracks">Tracks</string>
    <string name="like">liked you!</string>
    <string name="love">loves your profile!</string>
    <string name="letsHang">wants to hang with you!</string>
    <string name="sexy">thinks you are sexy!</string>
    <string name="successLogin">Successfully Loged In</string>
    <string name="PlzCreateProfile">To Continue - Create Profile</string>
    <string name="addedToFavor">Added To Favorites</string>
    <string name="likeTrack">You Sent "Like" To Her</string>
    <string name="loveTrack">You Sent "Love" To Her</string>
    <string name="hangTrack">You Sent "Lets Hang" To Her</string>
    <string name="sexyTrack">You Sent "You Sexy" To Her</string>
    <string name="successProfileCreated">Profile Created!</string>
    <string name="bannedProfile">You banned this profile!</string>
    <string name="removedFromFavor">Removed From Favorites</string>
    <string name="enterNameAge">Please Enter Name And Age</string>
    <string name="message">Message</string>
    <string name="Profile">Profile</string>
    <string name="expFromFundigo">To Login with Your "Fundigo" Details Please Fill the Following Fields:</string>
    <string name="expFromFundigoOr">Or Login As Guest</string>
    <string name="refreshData">Refresh Data</string>
    <string name="successLoggedIn">Successfully Logged in</string>
    <string name="title_activity_sms_sign_up_activity_part1">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string-array name="gender_array">
        <item>man</item>
        <item>woman</item>
    </string-array>

    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="phone_number_must_be_7">Phone Number Must Be 7 Digests Long</string>
    <string name="man">Mam</string>
    <string name="woman">Woman</string>
    <string name="looking_for">Looking For</string>
    <string name="gender">Gender</string>
    <string name="back">Back</string>
    <string name="legal_statement">Legal Statement</string>
    <string name="enter_name">Please Enter Name</string>
    <string name="read_legal_statement">Please Read Legal Statement And Approve</string>
    <string name="about_app">About</string>
    <string name="block_profiles">Block Profiles</string>
    <string name="cancel_block">Cancel\n Block</string>
    <string name="have_no_block">You Have No Block Users</string>
    <string name="type_or_upload">Type a Message Or Upload a Picture</string>



</resources>
