<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:divider="@drawable/divider_drawable"
    android:showDividers="middle"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:onClick="showAgeEditors"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/age"
            android:id="@+id/textView16"
            android:layout_weight="0.12"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:paddingStart="15dp"/>

        <EditText
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/age_minET"
            android:visibility="invisible" />

        <TextView
            android:layout_width="31dp"
            android:layout_height="29dp"
            android:text="@string/to"
            android:id="@+id/ageTo_TV"
            android:textSize="17sp"
            android:visibility="invisible" />

        <EditText
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/age_maxET"
            android:visibility="invisible" />


    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:onClick="showLookingForEditors"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:text="@string/lookingFor"
            android:id="@+id/textView17"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:gravity="center_vertical"/>

        <Spinner
            android:layout_width="101dp"
            android:layout_height="52dp"
            android:id="@+id/spinner"
            android:layout_marginLeft="90dp"
            android:visibility="invisible" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:onClick="showHeightEditors"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/height"
            android:layout_weight="0.11"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/min"
            android:id="@+id/height_minTV"
            android:layout_weight="0.09"
            android:textSize="17sp"
            android:gravity="center"
            android:layout_marginLeft="100dp"
            android:visibility="invisible" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/height_minET"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.16"
            android:visibility="invisible"
            android:text="1." />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/max"
            android:id="@+id/height_maxTV"
            android:layout_weight="0.11"
            android:gravity="center"
            android:textSize="17sp"
            android:layout_marginLeft="2dp"
            android:visibility="invisible" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/height_maxET"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.16"
            android:visibility="invisible"
            android:text="1." />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:onClick="showWeightEditors"
        android:weightSum="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/weight"
            android:layout_weight="0.11"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/min"
            android:id="@+id/weight_minTV"
            android:layout_weight="0.09"
            android:textSize="17sp"
            android:gravity="center"
            android:visibility="invisible" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/weight_minET"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.16"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/max"
            android:id="@+id/weight_maxTV"
            android:layout_weight="0.11"
            android:gravity="center"
            android:textSize="17sp"
            android:layout_marginLeft="2dp"
            android:visibility="invisible" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/weight_maxET"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.16"
            android:visibility="invisible" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:onClick="showBodyTypeEditors"
        android:weightSum="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/bodyType"
            android:layout_weight="0.11"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:paddingStart="15dp"/>

        <Spinner
            android:layout_width="94dp"
            android:layout_height="49dp"
            android:id="@+id/spinner2"
            android:layout_marginLeft="115dp"
            android:visibility="invisible" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:onClick="showOriginEditors"
        android:weightSum="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/origin"
            android:layout_weight="0.11"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingStart="15dp"/>

        <Spinner
            android:layout_width="94dp"
            android:layout_height="49dp"
            android:id="@+id/spinner3"
            android:layout_marginLeft="150dp"
            android:visibility="invisible" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:onClick="showRelationshipStatusEditors"
        android:weightSum="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/relationshipStatus"
            android:layout_weight="0.07"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingStart="15dp"/>

        <Spinner
            android:layout_width="94dp"
            android:layout_height="49dp"
            android:id="@+id/spinner4"
            android:layout_marginLeft="58dp"
            android:visibility="invisible" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:weightSum="1"
        android:paddingStart="8dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onlyPic"
            android:id="@+id/checkBox"
            android:layout_weight="0.07"
            android:checked="false"
            android:layout_marginLeft="7dp"
            android:textSize="18sp" />

    </TableRow>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:onClick="Filter"
        android:id="@+id/button"
        android:layout_weight="0.08" />

</LinearLayout>