<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="20.0">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/name"
                android:textSize="13sp"/>

            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="16"
                android:imeActionLabel="Done"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="20.0">

            <TextView
                android:id="@+id/edit_pro_gender_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/gender"
                android:textSize="13sp"
                android:layout_gravity="center_vertical"/>

            <Spinner
                android:id="@+id/edit_pro_gender_s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="16"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="20.0">

            <TextView
                android:id="@+id/tv_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/age"
                android:textSize="13sp"/>

            <EditText
                android:id="@+id/et_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="16"
                android:imeActionLabel="Done"
                android:inputType="number"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="20.0">

            <TextView
                android:id="@+id/edit_pro_preferred_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/lookingFor"
                android:textSize="13sp"
                android:layout_gravity="center_vertical"/>

            <Spinner
                android:id="@+id/edit_pro_preferred_s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="16"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="20.0">

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:text="@string/statusLine"
                android:textSize="13sp"/>

            <EditText
                android:id="@+id/et_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="16"
                android:hint="@string/isSingle"
                android:imeActionLabel="Done"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="20.0">

            <TextView
                android:id="@+id/tv_nation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"
                android:text="@string/origin"
                android:textSize="13sp"/>


            <Spinner
                android:id="@+id/spinner_ethnicity"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="16"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="20.0">

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/height"
                android:textSize="13sp"/>

            <EditText
                android:id="@+id/et_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="16"
                android:imeActionLabel="Done"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="20.0">

            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/weight"
                android:textSize="13sp"/>

            <EditText
                android:id="@+id/et_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="16"
                android:imeActionLabel="Done"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="20.0">

            <TextView
                android:id="@+id/tv_body_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:text="@string/bodyType"
                android:textSize="13sp"/>

            <Spinner
                android:id="@+id/spinner_body_type"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="16"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_next1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="Next"/>
    </LinearLayout>
</ScrollView>